# aws-ses-sender

./: .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.en.md  README.ko.md  README.md  deploy.sh  init_database.sh
.claude/: settings.local.json
migrations/: 20241228000000_initial_schema.sql
src/: app.rs  config.rs  constants.rs  error.rs  main.rs  state.rs
src/config/: db.rs  env.rs  mod.rs
src/handlers/: event_handlers.rs  health_handlers.rs  message_handlers.rs  mod.rs  topic_handlers.rs
src/middlewares/: auth_middlewares.rs  mod.rs
src/models/: content.rs  mod.rs  request.rs  result.rs
src/services/: mod.rs  receiver.rs  scheduler.rs  sender.rs
src/tests/: auth_tests.rs  event_tests.rs  handler_tests.rs  health_tests.rs  mod.rs  request_tests.rs  scheduler_tests.rs  status_tests.rs  topic_tests.rs
