[package]
name = "aws-ses-sender"
version = "0.1.0"
edition = "2021"
description = "AWS SES를 통한 대량 이메일 발송 서비스"
license = "MIT"

[dependencies]
aws-config = "1.5.16"
aws-sdk-sesv2 = "1.65.0"
axum = "0.8.1"
chrono = "0.4.39"
dotenv = "0.15.0"
futures = "0.3.31"
once_cell = "1.20.3"
sentry = "0.36.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
sqlx = { version = "0.8.3", features = ["runtime-tokio-native-tls", "sqlite"] }
thiserror = "2.0"
tokio = { version = "1.43.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[dev-dependencies]
regex = "1.11.1"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
