[package]
name = "aws-ses-sender"
version = "0.1.0"
edition = "2021"
description = "High-performance bulk email service via AWS SES"
license = "MIT"
authors = ["AWS SES Sender Team"]

[dependencies]
# AWS SDK
aws-config = "1.5"
aws-sdk-sesv2 = "1.65"

# Web framework
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }

# Async runtime
tokio = { version = "1.43", features = ["full", "sync"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "sqlite", "migrate"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time handling
chrono = "0.4"

# Environment variables (modern replacement for dotenv)
dotenvy = "0.15"

# Lazy initialization
once_cell = "1.20"

# Error tracking
sentry = "0.36"

# Error handling
thiserror = "2.0"

# Async utilities
futures = "0.3"

# Logging/Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# High-performance memory allocator
[target.'cfg(not(target_env = "msvc"))'.dependencies]
mimalloc = { version = "0.1", default-features = false }

[dev-dependencies]
regex = "1.11"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# Allow common patterns
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
struct_field_names = "allow"
similar_names = "allow"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3

[profile.release.build-override]
opt-level = 3

[profile.release.package."*"]
opt-level = 3
